test/files/neg/t8127a.check
t8127a.scala:7: error: Seq[Any] is not a valid result type of an unapplySeq method of an extractor.
    case H(v) =>
         ^
1 error
